basic css table layout

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <div class="tableContainer">
         <table id="htmlTable">
             <tr>
-                <th colspan="3">HTML Elements Reference</th>
+                <th colspan="3"><h1>HTML Elements Reference</h1></th>
             </tr>
             <tr>
-                <th>HTML Element</th>
-                <th>Decription</th>
-                <th>Example</th>
+                <th><h3>HTML Element</h3></th>
+                <th><h3>Decription</h3></th>
+                <th><h3>Example</h3></th>
             </tr>
 
 <!-- HTML Element table data  -->
@@ -69,12 +69,12 @@
         <div class="tableContainer">
             <table id="cssTable">
                 <tr>
-                    <th colspan="3">CSS Selectors Reference</th>
+                    <th colspan="3"><h1>CSS Selectors Reference</h1></th>
                 </tr>
                 <tr>
-                    <th>CSS Selector</th>
-                    <th>Decription</th>
-                    <th>Example</th>
+                    <th><h3>CSS Selector</h3></th>
+                    <th><h3>Decription</h3></th>
+                    <th><h3>Example</h3></th>
                 </tr>
 
 <!-- CSS Selector table data  -->
